--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <h6>Download Excursion (Coming soon!)</h6>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you </p>
+    <h6>Excursion remembers places you like, and recommends new points of interest around you. </h6>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png">
+    <h2> Coming soon for iPhone and Android </h2>
+    <h4> Download excursion (Coming soon!)</h4>
   </body>
 </html>
