--- a/index.html
+++ b/index.html
@@ -3,17 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>Discover hidden places in the world around you</title>
-    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <h6>Download Excursion (Coming soon!)</h6>
-    <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you </p>
-    <h6>Excursion remembers places you like, and recommends new points of interest around you. </h6>
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg">
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png">
-    <h2> Coming soon for iPhone and Android </h2>
-    <h4> Download excursion (Coming soon!)</h4>
+    <div id="Discover hidden places in the world around you">
+      <h1>Discover hidden places in the world around you</h1>
+    </div>
+    <div>
+      <h2><a href="#Discover hidden places in the world around you">Download Excursion (Coming soon!)</a></h2>
+    </div>
+    <div id="iphonevideo">
+      <video src="./Resources/Videos/excursion.mp4" height="720" width="404" controls autoplay loop>Video not supported</video>
+    </div>
+    <div>
+      <h3>Your personal travel guide</h3>
+        <p>Excursion remembers places you like, and recommends new points of interest around you </p>
+    </div>
+    <div>
+      <img src="./Resources/Images/camp.jpg"> </br></br>
+      <img src="./Resources/Images/phone.png">
+    </div>
+    <div>
+      <h4> Coming soon for iPhone and Android </h4>
+    </div>
+    <div>
+      <h5><a href="#Discover hidden places in the world around you">Download Excursion (Coming soon!)</a></h5>
+    </div>
+    <div>
+      <footer>
+        <p> &copy;Excursion </p>
+      </footer>
+    </div>
   </body>
 </html>
